--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 asgiref==3.6.0
+beautifulsoup4==4.11.1
 Django==4.1.5
+django-bootstrap-v5==1.0.11
+django-bootstrap5==22.2
+soupsieve==2.3.2.post1
 sqlparse==0.4.3
